[package]
name = "f1-api"
version = "0.0.0"
authors = ["Jan David <jandavid@6a64.com>"]
edition = "2018"

description = """
F1 API is a client library for the telemetry API of the F1 video games by
Codemasters. It uses asynchronous networking to decode the incoming UDP packets,
and turns them into strongly typed Rust structs.
"""

readme = "README.md"
repository = "https://github.com/hellobits/f1-api"
license = "MIT OR Apache-2.0"
keywords = ["api", "codemasters", "f1", "gaming"]
categories = ["api-bindings", "asynchronous"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "cli"

[[example]]
name = "readme"

[dependencies]
bitflags = "1.2.1"
bytes = "0.5.4"
derive-new = "0.5.8"
getset = "0.1.0"
net2 = "0.2.33"
tokio = { version = "0.2.13", features = ["macros", "net", "stream", "udp"] }
tokio-util = { version = "0.3.0", features = ["codec", "udp"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
clap = "2.33.0"
