[package]
name = "f1-api"
version = "0.1.0"
authors = ["Jan David <jandavid@6a64.com>"]
edition = "2018"

description = """
F1 API is a client library for the telemetry API of the F1 video games by
Codemasters. It uses asynchronous networking to decode the incoming UDP packets,
and turns them into strongly typed Rust structs.
"""

readme = "README.md"
repository = "https://github.com/nordsdk/f1-api"
license = "MIT OR Apache-2.0"
keywords = ["api", "codemasters", "f1", "gaming"]
categories = ["api-bindings", "asynchronous"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "cli"

[[example]]
name = "readme"

[dependencies]
bitflags = "1.2.1"
bytes = "0.5.4"
derive-new = "0.5.8"
getset = "0.1.0"
net2 = "0.2.33"
tokio = { version = "0.2.13", features = ["macros", "net", "stream", "udp"] }
tokio-util = { version = "0.3.0", features = ["codec", "udp"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
clap = "2.33.0"

[package.metadata.release]
disable-publish = true
disable-push = true
disable-tag = true
no-dev-version = true
pre-release-commit-message = "Release {{version}}"
pre-release-replacements = [
  {file="CHANGELOG.md", search="## \\[Unreleased\\]", replace="## [{{version}}] - {{date}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased]", exactly=1},
  {file="CHANGELOG.md", search="\\[unreleased\\]", replace="[{{version}}]"},
  {file="CHANGELOG.md", search="<!-- next-url -->\n", replace="<!-- next-url -->\n\n[unreleased]: https://github.com/nordsdk/f1-api/compare/{{tag_name}}...HEAD", exactly=1},
]
